--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tf-build-cli",
   "version": "0.1.0",
   "private": true,
+  "bin": {
+    "tfCli": "./bin/build.js"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,7 +12,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
+    "commander": "^6.2.1",
     "core-js": "^3.6.5",
+    "download-git-repo": "^3.0.2",
+    "ora": "^5.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
